sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
var l = getNombreValeur
var flag = true
while (flag)
{	flag = false
	for (i <- 0 to l-2)
	isNext ()
	}
	





def isNext(a:Int, b:Int){
if (a>b) then {echange a,b}
}
}
